# MetaCompressor

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.cursor/: settings.json
.cursor/agents/: metacompressor-specialist.md
.cursor/commands/: mc-roundtrip.md  mc-specialist.md  mc-test.md
.cursor/rules/: metacompressor-layout.mdc  metacompressor-tests.mdc  metacompressor-workflow.mdc
.cursor/skills/: README.md
.github/workflows/: build-mc-tokenizer-wheels.yml  ci.yml  update-mc-tokenizer-lock.yml
archive/: README.md
benchmarks/: __init__.py  acceptance_hardening.py  bench_corpus.py  differential_hit_rate.py  differential_parity_gate.py  differential_partial_reuse_simulation.py  production_validation.py  zstd_level_benchmark_generalization.py  zstd_sweep_mc1dir.py
benchmarks/acceptance/: __init__.py  acceptance_hardening.py  production_validation.py
benchmarks/corpus/: __init__.py  bench_corpus.py
benchmarks/differential/: __init__.py  differential_hit_rate.py  differential_parity_gate.py  differential_partial_reuse_simulation.py
docs/: METACOMPRESSOR_WORKING_CONTRACT.md  README.md  differential-partial-reuse-implementation-packet.md  differential-partial-reuse-slice1-checklist.md  differential-partial-reuse-slice1-commit-plan.md  differential-runtime-substitution-experimental-report.md  differential-slice1-stabilization-summary.md  differential-slice2-candidate.md  metacompressor-roadmap-speed-adoption.md  metacompressor-safe-speedup-priorities.md  phase6-adoption-mode-plan.md  phase7-boundary-redesign-research.md  repository-layout-policy.md  structure-cleanup-backlog.md  template-hotpath-optimization-summary.md
docs/adr/: 0001-layout-policy-and-ci-guardrails.md  README.md
docs/differential/: differential-partial-reuse-design.md  differential-partial-reuse-implementation-packet.md  differential-partial-reuse-slice1-checklist.md  differential-partial-reuse-slice1-commit-plan.md  differential-runtime-substitution-boundary-finding.md  differential-runtime-substitution-experimental-report.md  differential-slice1-stabilization-summary.md  differential-slice2-candidate.md
docs/planning/: metacompressor-safe-speedup-priorities.md  phase7-boundary-redesign-research.md
docs/policy/: METACOMPRESSOR_WORKING_CONTRACT.md  repository-layout-policy.md  structure-cleanup-backlog.md
mc_test_output/: app.log.restored  app.log_1.mc1  empty.txt_2.mc1  json_logs.log.restored  json_logs.log_1.mc1  repeated.txt.mc1  small.txt.mc1  small.txt.restored
mc_tokenizer_rs/: Cargo.toml  pyproject.toml
mc_tokenizer_rs/src/: lib.rs
metacompressor/: __init__.py  cli.py  compressor.py  container.py  container_wire.py  corpus.py  corpus_template.py  decompressor.py  delta.py  log_template.py  mc1_msgpack_short.py  mc1_types.py  mode_selector_v2.py  utils.py  zstd_affinity_pack_v1.py
metacompressor/differential/: __init__.py  core.py  orchestrator.py  persistence.py
metacompressor/tests/: __init__.py  conftest.py  path_utils.py  test_acceptance_hardening.py  test_adaptive_selection_v1.py  test_adaptive_selection_v2.py  test_cli.py  test_columnar_encoding_v2.py  test_compressor.py  (+21 more)
results/: README.md  delta_benchmark.md  differential_hit_rate.json  differential_parity_gate.json  differential_parity_gate.md  differential_partial_reuse_simulation.json  differential_partial_reuse_simulation.md  legacy_tokenization_object_churn_after.json  metacompressor_acceptance_hardening.json  metacompressor_acceptance_hardening.md  metacompressor_adaptive_field_aware_v2_benchmark.md  metacompressor_adaptive_hybrid_v1_benchmark.md  metacompressor_adaptive_selection_v1.md  metacompressor_adaptive_v2_1_predictive.md  metacompressor_adaptive_v2_2_predictive.md  metacompressor_adaptive_v2_predictive.md  metacompressor_columnar_v2_report.md  metacompressor_domain_profiles_v1_benchmark.md  metacompressor_edge_map.md  metacompressor_hybrid_row_columnar_v1_implementation_summary.md  metacompressor_internal_hardening_report.md  metacompressor_production_validation.json  metacompressor_production_validation.md  metacompressor_stress_report.md  metacompressor_structure_ndjson_prefix_report.md  metacompressor_structure_v2_report.md  metacompressor_v23_generalization_suite.md  metacompressor_v23_predictive_profiles_benchmark.md  metacompressor_v23_rc1_demo_1gb_logs.md  phase1_build_profile_100mb.json  phase2_zstd_affine_research_report.md  phase3_shaping_candidate_eval.json  phase4_warm_path_expansion_report.json  phase4_warm_path_expansion_report.md  phase5_product_benchmark_suite.json  phase5_product_benchmark_suite.md  tokenization_hotpath_safe_pass4_after.json  tokenization_hotpath_safe_pass4_before.json  tokenization_hotpath_safe_pass5_after.json  tokenization_hotpath_safe_pass5_profile.json  (+5 more)
scripts/: benchmark_adaptive_field_aware_v2.py  benchmark_adaptive_hybrid_v1.py  benchmark_adaptive_v1_vs_v2.py  benchmark_domain_profiles_v1.py  benchmark_predictive_v23_profiles.py  benchmark_v23_generalization_suite.py  check_repo_layout.py  generate_adaptive_selection_v1_report.py  generate_columnar_v2_report.py  run_precommit_pytest.py
tmp/: README.md
tmp_metacompressor_test/: repeated.txt
(+55 files in other folders)
