[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacompressor"
version = "0.1.0"
description = "Deterministic lossless compression using chunking + deduplication + Zstandard"
requires-python = ">=3.9"
dependencies = [
    "zstandard>=0.22",
    "xxhash>=3.0",
    "msgpack>=1.0",
]

[project.scripts]
mc = "metacompressor.cli:main"

[tool.pytest.ini_options]
testpaths = ["metacompressor/tests"]
markers = [
    "small: small tests (<= 1MB datasets)",
    "medium: medium tests (<= 50MB datasets)",
    "large: opt-in high-cost tests (100MB+ datasets or other long-running benchmarks; set RUN_LARGE_TESTS=1)",
]
