[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacompressor"
version = "0.1.0"
description = "Deterministic lossless compression using chunking + deduplication + Zstandard"
requires-python = ">=3.9"
dependencies = [
    "zstandard>=0.22",
    "xxhash>=3.0",
    "msgpack>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "black>=24",
    "pre-commit>=4",
]

[project.scripts]
mc = "metacompressor.cli:main"

[tool.setuptools.packages.find]
exclude = ["results*", "mc_test_output*", "tmp_metacompressor_test*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["metacompressor/tests"]
markers = [
    "small: small tests (<= 1MB datasets)",
    "medium: medium tests (<= 50MB datasets)",
    "large: opt-in high-cost tests (100MB+ datasets or other long-running benchmarks; set RUN_LARGE_TESTS=1)",
]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["metacompressor", "benchmarks", "scripts"]

[tool.ruff.lint]
# E/F/I/W without pyupgrade/bugbear avoids huge churn in legacy benchmarks; tighten later.
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/*.py" = ["E731"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py39"]
# Exclude generated/local trees; keep in sync with layout policy hygiene zones.
extend-exclude = "/(results|mc_test_output|tmp_metacompressor_test|\\.venv|build|dist)/"
